# IntronAwareExonDesigner

./: .gitignore  README.md  codex.md  codex.purpose.md  config.yaml  evaluator.py  ga.py  intron_design.py  main.py  pyproject.toml  run_ga.py
data/: aminoacid.fa  chimera.rna.fa
docs/: codex.purpose.md  requirement_definition.md
docs/thinking/: evaluator.md  output.md  parallelization.md  progress.md
outputs/: intron_design_dna_main_sequences.fa  intron_design_main_sequences.fa  intron_design_rna_main_sequences.fa  intron_design_stem_prob.tsv
tests/: conftest.py  test_evaluator.py  test_ga.py
