[project]
name = "intronawareexondesigner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "rna>=0.13.2",
    "tqdm>=4.67.1",
]
